[package]
name = "moro-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
futures = "0.3.21"
# moro = "0.1.1"
# moro = { version = "0.1.1", path = "../moro" }
moro = { git = "https://github.com/guswynn/moro", branch = "parallel" }
tokio = { version = "1.18.2", features = ["full"] }
